
    - **BUGFIX/IMPROVEMENT**: A style sheet with ``href == None`` (e.g. parsed with ``parseString()`` or build completely from scratch) uses ``os.getcwd()`` as its base href now to be able to resolve CSSImportRules.

    - BUGFIX/IMPROVEMENT: Added catching of WindowsError to default fetcher (e.g. is a file URL references a file not present).

    - CHANGE: ``CSSStyleSheet.add(rule)`` simply appends rules with no specific order in the sheet to the end of it. So e.g. COMMENTs, STYLE_RULEs, etc are appended while rules with a specific place are ordered-in as before (e.g. IMPORT_RULE or NAMESPACE_RULE). Until now rules of a specific type like COMMENTs were ordered together which does not really make sense. The ``csscombine`` needs this functionality and the resulting combined sheets should be more readable and understandable now.

    - CHANGE: Default URL fetcher emits an ERROR instead of a warning if finding a different mine-type than ``text/css``.

0.9.5b3 080605
    - **API CHANGE**: ``parse()`` is *DEPRECATED*, use ``parseFile()`` instead. I know this should not happen in a release already in beta but better now than later and currently both ways are still possible.

    - **FEATURE**: CSSStyleDeclatation objects may be used like dictionaries now. The value during setting a property may be a single value string or a tuple of ``(value, priority)``::

            >>> style = css.CSSStyleDeclaration()
            >>> style['color'] = 'red'
            >>> style.getProperties()
            [cssutils.css.Property(name='color', value=u'red', priority=u'')]
            >>> del style['color']
            >>> style['unknown'] = ('value', 'important')
            INFO    Property: No CSS2 Property: 'unknown'.
            >>> style.getProperties()
            [cssutils.css.Property(name='unknown', value=u'value', priority=u'impor
            tant')]
            >>> del style['never-set'] # does not raise KeyError but returns u'' like removeProperty()
            >>>
