@@ -1,5 +1,6 @@
 @charset "iso-8859-1";
 /* combined sheet 1 */
-sheet-1 {
+@namespace s1 "uri";
+s1|sheet-1 {
 	top: 1px
 	}
