@@ -1,7 +1,7 @@
 @charset "ascii";
 /* combined sheet 2 */
 @import "1.css";
-@namespace n2 "n2";
-sheet-2 {
+@namespace s2 "uri";
+s2|sheet-2 {
 	top: 2px;
 	}
